--- a/priv/templates/phx.gen.live/index.html.leex
+++ b/priv/templates/phx.gen.live/index.html.leex
@@ -1,30 +1,43 @@
-h1 Listing <%= schema.human_plural %>
+.card
+     .card-body
+          h2
+            .fa.fad.fa-folder.text-primary.mr-3
+            | Listing <%= schema.human_plural %>
+            .d-inline.ml-4
+              = live_patch to: Routes.purchase_order_index_path(@socket, :new), class: 'btn btn-primary rounded-circle p-0', style: "height: 2.5rem; width: 2.5rem; font-size: 1.65rem;" do
+                .fa.fal.fa-plus style="margin-right: 0 !important;"
 
-= if @live_action in [:new, :edit] do
-  = live_modal @socket, <%= inspect context.web_module %>.<%= inspect Module.concat(schema.web_namespace, schema.alias) %>Live.FormComponent,
-    id: @<%= schema.singular %>.id || :new,
-    title: @page_title,
-    action: @live_action,
-    <%= schema.singular %>: @<%= schema.singular %>,
-    return_to: Routes.<%= schema.route_helper %>_index_path(@socket, :index)
+          = if @live_action in [:new, :edit] do
+            = live_modal @socket, <%= inspect context.web_module %>.<%= inspect Module.concat(schema.web_namespace, schema.alias) %>Live.FormComponent,
+              id: @<%= schema.singular %>.id || :new,
+              title: @page_title,
+              modal_icon: @modal_icon,
+              action: @live_action,
+              <%= schema.singular %>: @<%= schema.singular %>,
+              return_to: Routes.<%= schema.route_helper %>_index_path(@socket, :index)
 
-table
-  thead
-    tr
-      <%= for {k, _} <- schema.attrs do %>
-      th <%= Phoenix.Naming.humanize(Atom.to_string(k)) %>
-      <% end %>
-      th
-  tbody id="<%= schema.plural %>"
-    = for <%= schema.singular %> <- @<%= schema.collection %> do
-    tr id="<%= schema.singular %>-#{<%= schema.singular %>.id}"
-      <%= for {k, _} <- schema.attrs do %>
-      td = <%= schema.singular %>.<%= k %>
-      <% end %>
-      td
-        span = live_redirect "Show", to: Routes.<%= schema.route_helper %>_show_path(@socket, :show, <%= schema.singular %>)
-        span = live_patch "Edit", to: Routes.<%= schema.route_helper %>_index_path(@socket, :edit, <%= schema.singular %>)
-        span = link "Delete", to: "#", phx_click: "delete", phx_value_id: <%= schema.singular %>.id, data: [confirm: "Are you sure?"]
+          table.table.table-hover.mt-4
+            thead
+              tr
+                <%= for {k, _} <- schema.attrs do %>
+                th <%= Phoenix.Naming.humanize(Atom.to_string(k)) %>
+                <% end %>
+                th
 
+            tbody id="<%= schema.plural %>"
+              = for <%= schema.singular %> <- @<%= schema.collection %> do
+                tr id="<%= schema.singular %>-#{<%= schema.singular %>.id}" phx-click="show" phx-value-id=<%= schema.singular %>.id
+                  <%= for {k, _} <- schema.attrs do %>
+                  td = <%= schema.singular %>.<%= k %>
+                  <% end %>
+                  td.text-center
+                    .btn.btn-sm.btn-primary.my-0.mr-3 phx-click="edit" phx-value-id=<%= schema.singular %>.id
+                      .fa.fal.fa-pencil
+                      | Edit
+                    = link to: "#", phx_click: "delete", phx_value_id: <%= schema.singular %>.id, data: [confirm: "Are you sure?"], class: 'btn btn-sm btn-outline-secondary' do
+                      .fa.fal.fa-times
+                      | Delete
 
-span = live_patch "New <%= schema.human_singular %>", to: Routes.<%= schema.route_helper %>_index_path(@socket, :new)
+          = live_patch to: Routes.<%= schema.route_helper %>_index_path(@socket, :new), class: 'btn btn-primary' do
+            .fa.fal.fa-plus.mr-2
+            | New <%= schema.human_singular %>
